# dea-vectoriser

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  environment.yaml  pyproject.toml  pyproject_poetry.toml  setup.cfg  setup.py
.github/workflows/: push.yml  release.yml
datacube_vectoriser/: cli.py  utils.py  vector_wos.py
dea_vectoriser/: cli.py  utils.py  vector_burnArea.py  vector_wos.py  vectorise.py
tests/: conftest.py  fixtures.py  test_cli.py  test_utils.py  test_vectoriser.py
