[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"


[tool.setuptools_scm]
write_to = "dea_vectoriser/version.py"

[tool.interrogate]
exclude = ["dea_vectoriser/version.py", "dea_vectoriser/__init__.py"]
ignore-semiprivate = true
ignore-nested-functions = true
