[metadata]
name = dea-vectoriser
version = 0.1.0
url = https://github.com/GeoscienceAustralia/dea-vectoriser/
description = Convert datacube datasets to vector outputs, ala Datacube Alchemist
long_description = file: README.md
license = Apache 2.0

[options]
packages = dea_vectoriser
install_requires =
    boto3
    rasterio
    Shapely
    geopandas

[options.entry_points]
console_scripts =
    dea-vectoriser = dea_vectoriser.cli:cli

[flake8]
max-line-length = 120
